<resources>
    <string name="app_name">Kinit</string>
    <string name="title_earn">Earn</string>
    <string name="title_spend">Use Kin</string>
    <string name="title_balance">Balance</string>
    <string name="title_more">More</string>
    <string name="resume">Continue</string>
    <string name="by_author">By %s</string>
    <string name="min_to_complete">%s Min</string>
    <string name="kin_reward">+%s KIN</string>
    <string name="kin_reward_upto">Up to %s KIN</string>
    <string name="reward_comming_your_way">are coming your way…</string>
    <string name="added_to_your_account">added to your account</string>
    <string name="next_task_available_on">Your next activity will be available on %s</string>
    <string name="next_task_available_tomorrow">Your next activity will be available tomorrow.</string>
    <string name="next_task_subtitle">We have planted the seed and your next activity is currently growing</string>
    <string name="creating_wallet">Creating wallet for your Kin…</string>
    <string name="migrating_wallet">Updating your wallet</string>
    <string name="complete_task_subtitle">You have completed this activity.</string>
    <string name="complete_task_title">Awesome!</string>
    <string name="transferring_your_kin">Your Kin is on its way</string>
    <string name="tap_to_finish">Tap to finish</string>
    <string name="your_new_balance">Your new balance</string>
    <string name="buy_now">Buy Now</string>
    <string name="send_kin">Send Kin</string>
    <string name="buying">Buying</string>
    <string name="share_code_to">Share code to</string>
    <string name="dialog_no_good_left_message">Please check back later</string>
    <string name="dialog_no_good_left_title">Oops! Someone grabbed the last one… for now</string>
    <string name="dialog_coupon_redeem_failed_title">Oops! Transaction incomplete</string>
    <string name="dialog_coupon_redeem_failed_message">Sorry! We\’re unable to retrieve your code. Please contact support.</string>
    <string name="dialog_exit_before_share_message">This code will only appear once.\nCopy and paste it somewhere safe</string>
    <string name="dialog_exit_before_share_title">Don’t leave without your code!</string>
    <string name="dialog_no_internet_message">Please check your internet connection and try again.</string>
    <string name="dialog_no_internet_title">Oh no! Your internet is MIA</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_got_it">Got it</string>
    <string name="dialog_back_to_list">Back to list</string>
    <string name="record_transactions">Your transactions will appear here!</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Suggestion Box</string>
    <string name="no_internet_subtitle">It seems that something is missing…\nPlease check your internet connection.</string>
    <string name="no_internet_title">Your internet is MIA</string>
    <string name="no_tasks_subtitle">We are laying the groundwork for your next activity.\nStay tuned :)</string>
    <string name="no_tasks_title">No activities at the moment</string>
    <string name="start_earn_kin">Start earning Kin</string>
    <string name="your_kin_balance">Your Kin Balance</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="error_in_submitting_answers">There was a problem submitting your answers</string>
    <string name="save_code_warning">To make sure you get your Kin , hit close below and continue on the next screen.</string>
    <string name="close">close</string>
    <string name="your_kin_is_on_its_way_with_a_brief_delay">Your Kin is on its way with a brief delay</string>
    <string name="warning_info_transaction">We have received your request but something got stuck along the way. Please press “close” and check your balance in a few hours. If no change has occurred, contact support.</string>
    <string name="support_email_address">support@kinitapp.com</string>
    <string name="support_email_subject">Kin Support Request</string>
    <string name="up_to_date">Up to date</string>
    <string name="update_now"><u>Update now</u></string>
    <string name="support_email_body_template">\n=====================\n
        The following information will help us provide better support:
        \nUser id:%1$s
        \nPlatform:%2$s
        \nVersion:%3$s
        \n=====================\n</string>
    <string name="feedback_email_body_template">We really appreciate your input. Please enter your feedback for Kinit %s here:</string>
    <string name="support_email_no_mail_app">Please send an email to support@kinitapp.com.\nThe email subject should be:\nKin Support Request.\nReference number %1$s"</string>
    <string name="feedback_email_no_mail_app">Please send an email to feedback@kinitapp.com.\n</string>
    <string name="kin_currency">KIN</string>
    <string name="version">version %s</string>
    <string name="error_unable_to_create_wallet">We were unable to create a wallet for you</string>
    <string name="error_unable_to_migrate_wallet">We were unable to migrate a wallet for you</string>
    <string name="error_unable_to_boot_wallet_title">Sorry, an error occurred. </string>
    <string name="error_booting_wallet_text">Sorry, an error occurred.\n<u>Retry</u> or <u>contact support</u></string>
    <string name="retry">Retry</string>
    <string name="contact_support">contact support</string>
    <string name="question_gray_text">Check all that apply</string>
    <string name="multi_answer_next_btn_text">Next</string>
    <string name="term_of_service">By clicking “Start earning Kin” you are agreeing\nto our Terms of Service and Privacy Policy</string>
    <string name="start_tutorial_text">Start earning Kin</string>
    <string name="tutorial_welcome_subtitle">Earn Kin, a new cryptocurrency, by completing fun daily activities and use it for your favorite things (travel, movies, music, and more)</string>
    <string name="welcome_to_kinit">Welcome to Kinit</string>
    <string name="enjoy">Enjoy</string>
    <string name="tutorial_subtitle_enjoy">In no time, you’ll have enough Kin to use towards great experiences or to share with your friends.</string>
    <string name="earn_kin">Earn Kin</string>
    <string name="tutorial_subtitle_earn">Earning Kin is just like playing a game, only better, because you get rewarded for your time.</string>
    <string name="tos"><![CDATA[By clicking Start earning Kin you are agreeing to our <u><font color=#82ffee>Terms of Service</font></u> and <u><font color=#82ffee>Privacy Policy</font></u>]]></string>
    <string name="your_phone_number">Your phone number</string>
    <string name="next">Next</string>
    <string name="verification_code_subtitle">We have sent a verification code to %1$s. Please type it below</string>
    <string name="code_sms_counter_subtitle">The code will arrive in %1$d sec</string>
    <string name="send_new_code"><![CDATA[Send me a new code >]]></string>
    <string name="pop_verify_phone_title">Help us keep your Kin safe</string>
    <string name="pop_verify_phone_sub_title">Please verify your phone number</string>
    <string name="pop_verify_phone_possitive">Verify my account</string>
    <string name="verification_sms">Verification SMS</string>
    <string name="phone_number">Phone number</string>
    <string name="your_phone_number_is_used_to_identify_your_wallet">Your phone number is used to identify your wallet.</string>
    <string name="please_fill_your_country_code">Please fill your country code</string>
    <string name="your_wallet_is_ready">Your wallet is ready!</string>
    <string name="woohoo">Woohoo</string>
    <string name="recent_activity_tab_text">Recent Actions</string>
    <string name="my_vouchers_tab_text">My Vouchers</string>
    <string name="no_transactions_text">In the future, your transactions will be recorded here!</string>
    <string name="no_coupons_text">Your coupons will be saved here!</string>
    <string name="p2p_server_problem_title">Houston we have a server problem</string>
    <string name="general_problem_title">Houston we have a problem</string>
    <string name="general_problem_body">Please try again later. If you continue to see this message reach out to support</string>
    <string name="p2p_server_problem_action">Back to list</string>
    <string name="p2p_friend_has_no_kinit_title">Sorry, you can only send Kin to Kinit users.</string>
    <string name="p2p_friend_has_no_kinit_body">Maybe send your friends to the app store?</string>
    <string name="p2p_back_to_list_action">Back to list</string>
    <string name="p2p_amount_too_big_title">That’s very kind</string>
    <string name="p2p_amount_too_big_body">But you can only send %1$dKIN at a time.</string>
    <string name="p2p_amount_not_valid_action">ok</string>
    <string name="p2p_amount_too_small_title">Not enough Kin</string>
    <string name="p2p_amount_too_small_body">Please choose a number above %1$dKIN</string>
    <string name="p2p_not_enough_balance_title">Looks like your balance is a bit low</string>
    <string name="p2p_not_enough_balance_body">Make sure you have at least %1$dKIN.</string>
    <string name="to">To</string>
    <string name="change">change</string>
    <string name="transaction_completed">Transaction completed</string>
    <string name="transaction_complete_subtitle">You’ve successfully sent %d KIN,\nsee transaction details under balance</string>
    <string name="transaction_complete_subtitle_prefix">You’ve successfully sent</string>
    <string name="transaction_complete_subtitle_amount">%d,</string>
    <string name="transaction_complete_subtitle_postfix">see transaction details under balance</string>
    <string name="or">Or</string>
    <string name="p2p_send_kin_to_self_body">You cannot send Kin to yourself, right? 😉</string>
    <string name="p2p_select_valid_contact">Please select a valid contact.</string>
    <string name="p2p_send_kin_to_self_title">You chose yourself!</string>
    <string name="ready_to_earn_some_kin">Hi! 👋\nReady to earn some Kin?</string>
    <string name="ready_to_earn_some_kin_compat">Hi!\nReady to earn some Kin?</string>
    <string name="welcome_back">We have identified your wallet.\nWhat would you like to do?</string>
    <string name="backup_info">Backing up your wallet will allow you to recover your Kin if you get locked out of the app or if your phone is ever lost or stolen.</string>
    <string name="wallet_backup">Wallet Backup</string>
    <string name="security">Security</string>
    <string name="qr_activity_desc_string">Restore requires to Scan your QR code and answer 2 security questions</string>
    <string name="start_backup">Start</string>
    <string name="qr_activity_title_string"><![CDATA[Scan & Answer]]></string>
    <string name="backup_now">Backup Now</string>
    <string name="choose_hint">Choose Question</string>
    <string name="yay">YAY!</string>
    <string name="your_wallet_is_backed_up">Your wallet is backed up!</string>
    <string name="check_your_email">Check your email</string>
    <string name="confirm">Confirm</string>
    <string name="oh_no">Oh no!</string>
    <string name="create_new_wallet">Create new wallet</string>
    <string name="restore">Restore</string>
    <string name="more_apps_are_coming_soon">More apps are coming soon</string>
    <string name="send_kin_coming_soon">Coming soon: a new way to use Kin across the ecosystem</string>
    <string name="introducing_the_kin_ecosystem_apps">Introducing Kin Ecosystem apps</string>
    <string name="discover_all">Discover all the amazing apps where you can  use Kin.</string>
    <string name="transaction_failed_subtitle">We received your send request but something went wrong. Please try again later.</string>
</resources>