<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom_navigation_background"
    android:orientation="horizontal">

    <org.kinecosystem.kinit.view.NavigationTab
        android:id="@+id/tab_earn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:src="@drawable/earn_drawable"
        app:text="@string/title_earn"
        />

    <org.kinecosystem.kinit.view.NavigationTab
        android:id="@+id/tab_spend"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:src="@drawable/spend_drawable"
        app:text="@string/title_spend"
        />


    <org.kinecosystem.kinit.view.NavigationTab
        android:id="@+id/tab_balance"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:src="@drawable/balance_drawable"
        app:text="@string/title_balance"
        />


    <org.kinecosystem.kinit.view.NavigationTab
        android:id="@+id/tab_info"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:src="@drawable/more_drawable"
        app:text="@string/title_more"
        />

</LinearLayout>