<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="org.kinecosystem.tippic.viewmodel.spend.EcoAppsViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/no_internet_error"
            layout="@layout/error_no_internet_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{!model.hasNetwork}"
            tools:visibility="gone"/>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:visibility="@{model.hasData}">


            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="19dp"
                    android:paddingTop="21dp"
                    android:paddingRight="19dp"
                    android:text="@string/introducing_the_kin_ecosystem_apps"
                    android:textColor="#7884a5"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="19dp"
                    android:paddingTop="8dp"
                    android:paddingRight="19dp"
                    android:paddingBottom="20dp"
                    android:text="@string/discover_all"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/categoriesContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:orientation="vertical"
                    app:ecoAppsCategories="@{model.appCategories}" />

                <android.support.v7.widget.CardView
                    android:id="@+id/coming_soon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="@{model::onComingSoonClicked}"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/learn_more_illustration_minsize_card" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="13dp"
                        android:text="@string/send_kin_coming_soon"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/footer_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingTop="33dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="33dp"
                    android:text="@string/more_apps_are_coming_soon"
                    android:textColor="@color/grey_dark_medium"
                    android:textSize="16sp"

                    />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>